--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <h1>rererew</h1>
     <h1>hello world</h1>
     <h1>hello world</h1>
-    <h1>hello world</h1>
-    <h1>hello world</h1>
-    <h1>hello world</h1>
-    <h1>hello world</h1>
-    <h1>hello world</h1>
+    <h1>Shoxjaxon</h1>
     <script src="assets/js/app.js" defer></script>
 </body>
 </html>
